--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: xivo-ci
 Section: admin
 Priority: extra
-Maintainer: XiVO DEV Team <dev@avencall.com>
-Uploaders: XiVO Builder Team <release@xivo.fr>
+Maintainer: XiVO Dev Team <dev+pkg@proformatique.com>
+Uploaders: XiVO Builder Team <release@xivo.io>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.4
 
