--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,14 @@
 Source: xivo-ci
 Section: admin
 Priority: extra
-Maintainer: XiVO Dev Team <dev+pkg@proformatique.com>
-Uploaders: XiVO Builder Team <release@xivo.io>
+Maintainer: Wazo Maintainers <dev.wazo@gmail.com>
 Build-Depends: debhelper (>= 9)
-Standards-Version: 3.9.4
+Standards-Version: 3.9.6
 
 Package: xivo-ci
 Architecture: all
 Depends: ${misc:Depends},
          git,
          python
-Description: XIVO Continuous Integration
- XIVO Continuous Integration
+Description: Wazo Continuous Integration
+ Wazo Continuous Integration
