debian: add missing dependency: wget

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Package: xivo-ci
 Architecture: all
 Depends: ${misc:Depends},
          git,
-         python
+         python,
+         wget
 Description: Wazo Continuous Integration
  Wazo Continuous Integration
