--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: xivo-ci
 Section: admin
 Priority: optional
-Maintainer: Wazo Maintainers <dev.wazo@gmail.com>
+Maintainer: Wazo Maintainers <dev+pkg@wazo.community>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
 
